--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,10 +101,10 @@
 
 
                     <LinearLayout
-                        android:background="@color/colorPrimary"
                         android:id="@+id/llmain"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@color/colorPrimary"
                         android:orientation="vertical"
                         android:visibility="gone">
 
@@ -114,10 +114,10 @@
                             android:orientation="vertical">
 
                             <androidx.cardview.widget.CardView
-                                android:background="@color/cardview_light_background"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_margin="0dp"
+                                android:background="@color/cardview_light_background"
                                 app:cardCornerRadius="0dp">
 
                                 <com.smarteist.autoimageslider.SliderView
@@ -165,6 +165,7 @@
                             android:padding="2dp"
                             android:scrollbars="vertical"
                             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -172,6 +173,7 @@
                             android:text="Upcoming Birthday:-"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
+
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -205,8 +207,8 @@
                                 android:scrollHorizontally="true"
                                 android:singleLine="true"
                                 android:text=""
-                                android:textStyle="bold"
-                                android:textColor="@color/red">
+                                android:textColor="@color/red"
+                                android:textStyle="bold">
 
                             </TextView>
                         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -229,9 +231,9 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:gravity="center|start"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:gravity="center|start"
                                     android:padding="0dp"
                                     android:text="Highest Scorer"
                                     android:textColor="@color/colorPrimary"
@@ -877,24 +879,25 @@
             android:weightSum="1">
 
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_gravity="bottom|start"
                 android:layout_weight="0.3"
                 android:background="@color/colorAccent"
+                android:gravity="bottom|start"
                 android:orientation="vertical"
                 android:paddingTop="5dp">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/materialCardView"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
                     android:background="@color/white"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="8dp"
+                    app:cardCornerRadius="1dp"
+                    app:cardElevation="1dp"
                     app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -902,8 +905,8 @@
 
                     <ImageView
                         android:id="@+id/profile_image"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:scaleType="fitXY"
                         android:src="@drawable/person">
@@ -918,10 +921,22 @@
                     android:id="@+id/uname"
 
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_weight="0.1"
+                    android:gravity="center|start"
+                    android:text=""
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtUserType"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="5dp"
                     android:gravity="center|start"
                     android:text=""
                     android:textColor="@android:color/white"
@@ -938,7 +953,7 @@
                     android:gravity="center|start"
                     android:text=""
                     android:textColor="@android:color/white"
-                    android:textSize="18sp"
+
                     android:textStyle="bold" />
 
                 <TextView
@@ -950,9 +965,20 @@
                     android:gravity="center|start"
                     android:text=""
                     android:textColor="@android:color/white"
-                    android:textSize="18sp"
                     android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/txtrole"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center|start"
+                    android:text=""
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
                 <View
                     android:layout_width="match_parent"
