1.hide Keyboard done.

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -254,8 +254,9 @@
 
 
                         <Button
+                            android:layout_gravity="center"
                             android:id="@+id/btnpassword"
-                            android:layout_width="fill_parent"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/otp_edtext"
                             android:layout_centerHorizontal="true"
