--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -75,8 +75,8 @@ app:civ_border_width="2dp"
             android:gravity="center"
             android:text=""
             android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@android:color/white"
+            android:textStyle="italic"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/logo"
             app:layout_constraintHorizontal_bias="0.504"
