--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -70,6 +70,7 @@
             android:background="@color/white"
             android:foregroundGravity="center"
             android:gravity="center"
+
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +82,7 @@
 
             <Button
                 android:id="@+id/btnlogin"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/btnsignup"
                 android:layout_centerHorizontal="true"
@@ -101,12 +102,12 @@
 
             <Button
                 android:id="@+id/btnsignup"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/buttonstyle"
@@ -159,14 +160,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center"
             android:background="@color/white"
             android:fontFamily="@font/roboto_light"
             android:gravity="center"
             android:text="@string/the_official_app"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintBottom_toTopOf="@+id/txtversion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -186,9 +188,8 @@
             android:fontFamily="@font/roboto_light"
             android:gravity="center|bottom"
             android:text=""
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
+            android:textStyle="italic"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
