--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -269,7 +269,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:visibility="visible"
             android:id="@+id/lointxt"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="45dp"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
@@ -319,9 +319,9 @@
             android:layout_height="match_parent"
             android:gravity="center|bottom"
             android:text=""
+            android:textStyle="italic"
             android:layout_marginBottom="5dp"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorPrimary"
             />
 
