--- a/app/src/main/res/layout/dialog_demo.xml
+++ b/app/src/main/res/layout/dialog_demo.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-android:layout_gravity="center"
-    android:gravity="center"
     app:cardMaxElevation="@dimen/activity_padding"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
@@ -29,10 +29,11 @@ android:layout_gravity="center"
 
         <Button
             android:id="@+id/dialog_ok"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_alignBottom="@+id/dialog_img"
             android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:background="#340277BD"
             android:gravity="center"
             android:text="@string/dialog_ok"
