--- a/app/src/main/res/layout/recycler_view_player_row.xml
+++ b/app/src/main/res/layout/recycler_view_player_row.xml
@@ -157,7 +157,7 @@
                     android:textColor="@color/red"
                     android:textSize="13dp"
                     android:textStyle="bold"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imgZoom"
